# Yates_Daniel_mushROOM_Capstone

./: .continuerc.json  .env.example  .eslintrc.js  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierrc  .prettierrc.js  .vscodeignore  README.md  alt.json  bootstrap.ps1  continuerc.json  data-report.md  nx.json  package.json  pnpm-instructions.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  realm_config.json  remoteapinotes.md  requirements.txt  setup_env.sh
.github/workflows/: ci.yml
.mdb/: meta.json
.nx/workspace-data/: lockfile.hash
.prompts/: comment.prompt  data.prompt  hook.prompt  new-prompt-file.prompt  pe.prompt  ps1.prompt  reactcomponent.prompt  sh.prompt  test.prompt
.trunk/: trunk.yaml
backen/controllers/: favoriteController.ts  userController.ts
backen/middleware/: customErrors.ts
backen/models/: UserModel.ts
backen/routes/: favoriteRoutes.ts  mushroomRoutes.ts
backend/: .prettierrc.ts  README.md  docker-compose.yml  eslintrc.ts  jest.config.js  mockSchema.js  package.json  pipeline.py  server.js  server.ts
backend/config/: index.js
backend/controllers/: authController.js  authController.ts  blogcontroller.js  blogcontroller.ts  mushroomController.js  mushroomController.ts  userController.js
backend/data/: cacheManager.js  cacheManager.ts  db.js  db.ts  mushroomService.js  mushroomValidator.js  seed.js  userService.ts
backend/db/: index.js
backend/middleware/: auth.js  customErrors.js  favoriteService.ts  helperFn.js  logger.js  logger.ts  mushroomService.js  mushroomService.ts
backend/models/: BlogPostModel.js  FavoriteModel.js  Image.js  ImageObservation.js  Location.js  LocationDescription.js  Mushroom.js  MushroomModel.js  Name.js  NameClassification.js  NameDescription.js  Observation.js  User.js  UserModel.js  faveModel.ts  mushroom.js  postModel.ts
backend/mongo/: README.md
backend/mongo/models/: Location.js  NameClassification.js  NameDescription.js
backend/mongo/scripts/: setup.js
backend/routes/: BlogRoutes.js  MushroomRoutes.js  ObservationRoutes.js  UserRoutes.js  blog.js  blogRoutes.ts  mongo.js  mushrooms.js  users.js
backend/scripts/: import.js  populateMushrooms.js
backend/src/: index.ts  server.ts
backend/src/services/: imageService.ts  r2Service.ts
backend/src/types/: declarations.d.ts
backend/test/: jest.config.js  mushroomRoutes.test.js
backend/types/: types.ts
data_sources/MushCluster/: config.json
datapipe/: pyproject.toml
docs/: apiref.md  contribs.md  overview.md  readme.md  userguide.md
etl/: mushroom_etl.py
etl/data/samples/: images_observations_sample.md  images_sample.md  location_descriptions_sample.md  locations_sample.md  name_classifications_sample.md  name_descriptions_sample.md  names_sample.md  observations_sample.md
frontend/: .eslintrc.cjs  .eslintrc.js  README.md  api.ts  docker-compose.yaml  main.tsx  package.json  pnpm-lock.yaml  tsconfig.json  useApi.ts  vite.config.ts
frontend/mushROOM/: package.json
frontend/mushROOM/src/: App.jsx  api.js  main.jsx
frontend/mushROOM/src/components/: DetailsView.jsx  Error.jsx  MushroomCard.css  MushroomCard.jsx  MushroomContext.jsx  MushroomSearch.jsx  (+3 more)
frontend/src/: .eslintrc.js  App.css  App.jsx  App.tsx  api.js  index.css  main.jsx  main.tsx  package.json  pnpm-lock.yaml  queryClient.ts  service-worker.ts  theme.ts  tsconfig.json  vite.config.ts
frontend/src/Mushroom Hunter/: package.json
frontend/src/api/: mongodb.ts  offlineFirstApi.ts
frontend/src/components/: AboutPage.jsx  AboutPage.tsx  BlogPage.jsx  BlogPage.tsx  BlogPost.jsx  BlogPost.tsx  DetailsView.jsx  DetailsView.tsx  Error.jsx  FilterSidebar.tsx  Header.tsx  LoginPage.jsx  LoginPage.tsx  MushroomCard.css  MushroomCard.jsx  MushroomCard.tsx  MushroomContext.jsx  MushroomDetails.tsx  MushroomProvider.jsx  MushroomSearch.jsx  MushroomSearch.tsx  Navigation.css  Navigation.jsx  Navigation.tsx  PrivateRoute.jsx  PrivateRoute.tsx  ProfilePage.jsx  ProfilePage.tsx  ResultsList.jsx  ResultsList.tsx  SearchBar.jsx  SearchBar.tsx  ajaxDemo.jsx  api.js  mushroomReducer.js  mushroomReducer.tsx  nav.jsx
frontend/src/db/: localDatabase.ts
frontend/src/hooks/: useMushrooms.ts
frontend/src/types/: index.ts  mushroom.ts
middleware/: customErrors.js  logger.js  mushroomService.js
python/: logging.yaml  main.py  pyproject.toml  pytest.ini  test_pipeline.py
python/src/: __init__.py  api_mapper.py  config.py  data_csv.py  data_pipeline.py  database.py  downloader.py  enhanced_csv_processor.py  exceptions.py  fix_csv_format.py  log_utils.py  logging.yaml  mo-api.md  monitoring.py  pipeline. py  pipeline.py  pyproject.toml  reset_pipeline.py  schemas.py  setup.py  validation.py
python/src/original/: datapipe.py  pyproject.toml
python/src/pipeline/: pipeline.py
python/src/src/: data_csv.py
python/src/tests/: __init__.py  test_data_csv.py  test_pipeline.py
python/src/utils/: logging.py  metrics.py
python/tests/: __init__.py  conftest.py  test_api_mapper.py  test_config.py  test_csv-processing.py  test_csv_processor.py  test_data_csv.py  test_data_pipeline.py  test_data_pipeline_integration.py  test_data_pipeline_orchestration.py  test_database.py  test_dataclasses.py  test_downloader.py  test_exceptions.py  test_monitoring.py  test_pipeline_integration.py  test_schemas.py  test_utility_functions.py  test_utils_logging.py  test_utils_metrics.py  test_validation.py
routes/: BlogRoutes.js  MushroomRoutes.js  UserRoutes.js
src/: main.ps1
tests/: test.ps1
workers/: wrangler.jsonc
workers/.wrangler/config/: default.toml
workers/image-processor/src/: db.ts  index.ts  wrangler.toml
workers/src/: db.ts  index.ts
