[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mushroom-etl"
version = "0.1.0"
description = "ETL pipeline for Mushroom Observer data to MongoDB Atlas"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Daniel Yates", email = "example@example.com" }]

dependencies = [
  "pandas>=2.2.0",
  "pymongo>=4.0.0",
  "pydantic>=1.9.0,<2.0.0",
  "requests>=2.25.0",
  "beautifulsoup4>=4.9.0",
  "numpy>=1.20.0",
  "notebook>=6.4.0", # For Jupyter notebooks
  "matplotlib>=3.4.0", # For visualizations
  "seaborn>=0.11.0", # For advanced visualizations
  "python-dotenv>=1.0.0",
  "sqlalchemy>=1.4.0", # For database connections
  "psycopg2-binary>=2.9.0", # PostgreSQL adapter
  "great-expectations>=0.15.0", # For data validation
  "dotenv>=0.9.9",
]

[project.optional-dependencies]
dev = ["ruff>=0.0.270", "pytest>=7.0.0", "pytest-cov>=4.0.0"]
