[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.8.0"
requests5 = "^1.0.0"
bson = "^0.5.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
