[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Daniel Yates <145247690+Acid-base@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.8.0"
pandas = "^2.2.2"
logging = "^0.4.9.6"
typing = "^3.1"
numpy = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
