[tool.poetry]
name = "mushroom-data-processing"
version = "0.1.0"
description = "Data processing pipeline for mushroom observations"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.0.0"
python-dotenv = "^1.0.0"
pymongo = "^4.5.0"
pyyaml = "^6.0.1"
pydantic = "^2.6.1"
pydantic-csv = "^0.1.0"
pydantic-settings = "^2.1.0"
pytest = "^8.3.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.2,<9.0.0"
ruff = "^0.2.1"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # import-order
    "N",  # naming
    "C",  # complexity
    "D",  # duplicate
    "R",  # refactoring
    "T",  # type-checking
    "A",  # astroid
    "O",  # ordering
    "M",  # misc
]
